--- a/impressum.html
+++ b/impressum.html
@@ -39,9 +39,9 @@
 					81541 München<br/>
 					Germany
 					</p>
-					<p>
+					<p class="email">
 						M.: +49 160 949 105 81<br/>
-						E.: info@sport4-you.de<br/>
+						E.: <a href="mailto:info@sport4-you.de">info@sport4-you.de</a><br/>
 						W.: www.sport4-you.de
 					</p>
 					<p>Design / Programmierung © Alina Sauer / Boris Conrad Heißerer<br/>
