--- a/kontakt.html
+++ b/kontakt.html
@@ -35,7 +35,7 @@
 						81541 München</p>
 					<p>M.: 0160 949 105 81<br/>
 						Erreichbar: Montag - Freitag von 07.00 - 20..00 Uhr</p>
-					<p>E.: info@sport4-you.de</p>
+					<p class="email">E.: <a href="mailto:info@sport4-you.de">info@sport4-you.de</a></p>
 					<p>Wir freuen uns auf Ihren Anruf!</p>
 				</div>
 				<div id="content-right">
