--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<meta content="Sport4you, Team" name="Keywords" />
-		<meta content="text/html; charset=windows-1252" http-equiv="Content-Type" />
+    	<meta content="Sport4you, Team, Personal Fitness Training, Fitness Personal Training, Personal Training kosten, Personal Training München, Personal Training Preise, Personal Fitness Trainer, Fitnesstrainer, Fitness Trainer, Training Personal, Lauftraining" name="Keywords" />
+		<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 		<title>Sport4you</title>
-        <link rel="stylesheet" href="style.css" type="text/css"/>
+        <link rel="stylesheet" href="style_home.css" type="text/css"/>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-		
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-		<script type="text/javascript" src="script.js"></script>
 		
     </head>
     
     <body>
     
 	 	<div id="wrapper">
-			<div id="home_center">
-					<p class="home"><a href="philosophie.html"></a></p>
+			<div id="content_left_home">
+					<div id="logo_02">
+						<a href="personal-training-muenchen-philosophie.html"><img src="images/logo_02.png" onmouseover="this.src='images/logo_02_mouseover.png'" onmouseout="this.src='images/logo_02.png'"/></a>
+						</div>
+			</div>
+			<div id="content_right_home">
+				<p class="color_home"><a href="personal-training-muenchen-philosophie.html">"Sport 4 your life"</a></p>
+				<p class="color_home">Das Personal Fitness Training „<a href="personal-training-muenchen-philosophie.html">Sport 4 you</a>“ bieten Ihnen ein erstklassiges, individuelles Training in <br/>und um München, das ganz auf Ihre persönlichen Bedürfnisse zugeschnitten ist. <a href="personal-training-muenchen-team.html">Ihr Personal Fitness Trainer</a> erstellt gemeinsam mit Ihnen einen variantenreichen Trainingsplan, der sowohl Ihre Kraft, wie auch Ihre Koordination und Ausdauer verbessert. </p>
+				<p class="color_home">Wir beginnen mit einer kostenlosen Erstanamnese, die dazu dient, <a href="personal-training-muenchen-training.html">Ihr Training</a> optimal und effizient <br/>zu gestalten. So bestimmen wir Ihre optimalen Pulsfrequenzzonen und führen einen FMS (Functional Movement Screen) Test durch. Dieser bietet die Möglichkeit, etwaige muskuläre Disbalancen, Verkür- zungen oder Defizite aufzuzeigen. Das dient unter anderem auch dazu Verletzungen vorzubeugen. 
+				</p>
+				<p>
+					Ob zu Hause, im Büro oder in einem der zahlreichen Münchner Parks - Ihr Personal Trainer ist mitsamt Trainingsequipment vor Ort.
+				</p>
+				<p>
+					Wenn Sie mit Ihrem Partner oder einem guten Freund trainieren möchten, bieten wir Ihnen auch hierfür eine kostengünstige Variante für zwei oder mehr Personen an. 
+				</p>
+				<p>
+					Unser Fitness Personal Trainer trainiert Sie nach dem neuesten Stand der Sportwissenschaft und steht in ständigem Kontakt mit Profisportlern und Ärzten. 
+				</p>
+				<p class="color_home">
+					Sie wollen mehr über das Personal Training München „<a href="personal-training-muenchen-philosophie.html">Sport 4 you</a>“ erfahren?! Kontaktieren Sie mich einfach dirket unter der Telefonnummer +49 160 949 105 81 oder per Mail unter <a href="mailto:info@sport4-you.de">info@sport4-you.de</a>.
+				</p>
+				<p>
+					Sportliche Grüße,<br/>
+					Ihr Tom Kriechbauer und Team in und um München
+				</p>
 			</div>
 		</div>
 		
