--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</div>
 			<div id="content_right_home">
 				<p class="color_home"><a href="personal-training-muenchen-philosophie.html">"Sport 4 your life"</a></p>
-				<p class="color_home">Das Personal Fitness Training „<a href="personal-training-muenchen-philosophie.html">Sport 4 you</a>“ bieten Ihnen ein erstklassiges, individuelles Training in <br/>und um München, das ganz auf Ihre persönlichen Bedürfnisse zugeschnitten ist. <a href="personal-training-muenchen-team.html">Ihr Personal Fitness Trainer</a> erstellt gemeinsam mit Ihnen einen variantenreichen Trainingsplan, der sowohl Ihre Kraft, wie auch Ihre Koordination und Ausdauer verbessert. </p>
+				<p class="color_home">Das Personal Fitness Training „<a href="personal-training-muenchen-philosophie.html">Sport 4 you</a>“ bietet Ihnen ein erstklassiges, individuelles Training in <br/>und um München, das ganz auf Ihre persönlichen Bedürfnisse zugeschnitten ist. <a href="personal-training-muenchen-team.html">Ihr Personal Fitness Trainer</a> erstellt gemeinsam mit Ihnen einen variantenreichen Trainingsplan, der sowohl Ihre Kraft, wie auch Ihre Koordination und Ausdauer verbessert. </p>
 				<p class="color_home">Wir beginnen mit einer kostenlosen Erstanamnese, die dazu dient, <a href="personal-training-muenchen-training.html">Ihr Training</a> optimal und effizient <br/>zu gestalten. So bestimmen wir Ihre optimalen Pulsfrequenzzonen und führen einen FMS (Functional Movement Screen) Test durch. Dieser bietet die Möglichkeit, etwaige muskuläre Disbalancen, Verkür- zungen oder Defizite aufzuzeigen. Das dient unter anderem auch dazu Verletzungen vorzubeugen. 
 				</p>
 				<p>
@@ -32,7 +32,7 @@
 					Unser Fitness Personal Trainer trainiert Sie nach dem neuesten Stand der Sportwissenschaft und steht in ständigem Kontakt mit Profisportlern und Ärzten. 
 				</p>
 				<p class="color_home">
-					Sie wollen mehr über das Personal Training München „<a href="personal-training-muenchen-philosophie.html">Sport 4 you</a>“ erfahren?! Kontaktieren Sie mich einfach dirket unter der Telefonnummer +49 160 949 105 81 oder per Mail unter <a href="mailto:info@sport4-you.de">info@sport4-you.de</a>.
+					Sie wollen mehr über das Personal Training München „<a href="personal-training-muenchen-philosophie.html">Sport 4 you</a>“ erfahren?! Kontaktieren Sie mich einfach direkt unter der Telefonnummer +49 160 949 105 81 oder per Mail unter <a href="mailto:info@sport4-you.de">info@sport4-you.de</a>.
 				</p>
 				<p>
 					Sportliche Grüße,<br/>
