--- a/personal-training-muenchen-ernaehrungscoaching.html
+++ b/personal-training-muenchen-ernaehrungscoaching.html
@@ -39,7 +39,7 @@
 				</div>
 				
 				<div id="content_ernaehrung">
-					<p>Gesunde Ernährung ist ein wesentlicher Teil <br/>und gehört zum Training dazu. Egal ob Sie <br/>abnehmen oder Ihre Leistungen steigern wollen. <br/>Selbst eine kleine Ernährungsumstellung <br/>bewirkt bereits Großes.</p>
+					<p>Gesunde Ernährung ist ein wesentlicher Teil <br/>und gehört zum Training dazu. Egal ob Sie <br/>abnehmen oder Ihre Leistungen steigern wollen. <br/>Wir schauen uns gerne ihre Essgewohnheiten an und versuchen Sie mit ihnen zu optimieren.</p>
 					<p>Selbstverständlich ohne Hungern!</p>
 				</div>
 				
