--- a/personal-training-muenchen-philosophie.html
+++ b/personal-training-muenchen-philosophie.html
@@ -27,7 +27,7 @@
 			
 			<div id="content">
 				<div id="content_left">
-					<p>Alle Personal Trainer sind langjährige, erfahrene Sportler und wurden<br/>
+					<p>Alle Personal Trainer sind langjährige, erfahrene Sportler und werden<br/>
 						neben ihrem Sportstudium an der Eliteuniversität TU München von einem langjährigen Fitnesspersonaltrainer weitergebildet.</p>
 						<p>Jedes Training wird von professionellen Trainern angeleitet und an Sie angepasst.</p>
 						<p>Ihr Training variiert laufend, wodurch Langeweile unmöglich ist.<br/>
